--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/Yetix33/Shopping-Cart/issues"
   },
-  "homepage": "https://github.com/Yetix33/Shopping-Cart#readme"
+  "homepage": "https://github.com/Yetix33/Shopping-Cart#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.3.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.3.14"
+  }
 }
