--- a/angular-shopping/package.json
+++ b/angular-shopping/package.json
@@ -25,10 +25,11 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "firebase": "^5.6.0",
     "jwks-rsa": "^1.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.14",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
